--- a/style.css
+++ b/style.css
@@ -2012,6 +2012,9 @@ form.login .lost_password a {
   border-bottom: 1px solid #e0e7f0;
   list-style-type: none !important;
 }
+.woocommerce-MyAccount-navigation li:first-child {
+  margin-top: -1.5rem !important;
+}
 .woocommerce-MyAccount-navigation li:last-child {
   margin-bottom: 2rem;
 }
